--- a/.github/workflows/hourly-schedule.yml
+++ b/.github/workflows/hourly-schedule.yml
@@ -20,12 +20,17 @@ jobs:
         with:
           python-version: '3.11'
       
+      - name: Create service account file
+        run: |
+          printf '%s' "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" > /tmp/service_account.json
+          chmod 600 /tmp/service_account.json
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
+
       - name: Run sheet_drive.py script
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          GOOGLE_APPLICATION_CREDENTIALS: /tmp/service_account.json
         run: python sheet_drive.py
