--- a/.github/workflows/hourly-schedule.yml
+++ b/.github/workflows/hourly-schedule.yml
@@ -14,44 +14,37 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      
-      - name: Create service account file (handle raw or base64)
-        run: |
-          set -euo pipefail
-          SA_RAW="${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}"
-          # If the secret starts with a JSON object, write it directly.
-          if echo "$SA_RAW" | sed -n '1s/^[[:space:]]*//p' | grep -q '^\{'; then
-            printf '%s' "$SA_RAW" > /tmp/service_account.json
+
+    - name: Create service account file (handle raw or base64)
+      run: |
+        set -euo pipefail
+        SA_RAW="${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}"
+        # If the secret starts with a JSON object, write it directly.
+        if echo "$SA_RAW" | sed -n '1s/^[[:space:]]*//p' | grep -q '^\{'; then
+          printf '%s' "$SA_RAW" > /tmp/service_account.json
+        else
+          # Otherwise try base64-decode; if that fails, fall back to raw write.
+          if echo "$SA_RAW" | base64 --decode >/tmp/service_account.json 2>/dev/null; then
+            true
           else
-            # Otherwise try base64-decode; if that fails, fall back to raw write.
-            if echo "$SA_RAW" | base64 --decode >/tmp/service_account.json 2>/dev/null; then
-              true
-            else
-              printf '%s' "$SA_RAW" > /tmp/service_account.json
-            fi
+            printf '%s' "$SA_RAW" > /tmp/service_account.json
           fi
-          # Validate JSON
-          python - <<'PY'
-import json,sys
-try:
-    json.load(open('/tmp/service_account.json'))
-except Exception as e:
-    print('Service account secret is not valid JSON:', e)
-    sys.exit(1)
-PY
-          chmod 600 /tmp/service_account.json
+        fi
+        # Validate JSON
+        python -m json.tool /tmp/service_account.json >/dev/null
+        chmod 600 /tmp/service_account.json
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Run sheet_drive.py script
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: /tmp/service_account.json
-        run: python sheet_drive.py
+    - name: Run sheet_drive.py script
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: /tmp/service_account.json
+      run: python sheet_drive.py
